# signal-generator

design/: design.kicad_prl  design.kicad_pro  design.kicad_sch  fp-info-cache
simulation/: Draft1.op.raw  Draft1.plt  Draft1.raw  offset-smaller-r2r.asc  offset-smaller-r2r.op.raw  offset-smaller-r2r.raw  offset.asc  offset.op.raw  offset.raw  other.asc  pwm-sallen-key-offsetasc.asc  vca.asc  vca.op.raw  vca.raw
soft/: .gitignore  CMakeLists.txt  sdkconfig
soft/main/: CMakeLists.txt  cosine_gen_hw.c  cosine_gen_hw.h  ctl.c  ctl.h  gen.c  gen.h  isr_mgr.c  isr_mgr.h  keypad.c  keypad.h  main.c  main.h  offset.c  offset.h  rect_gen.c  rect_gen.h  regulator.c  regulator.h  sine_gen.c  sine_gen.h  triangle_gen.c  triangle_gen.h  ui.c
soft/main/generators/: dac_dma_gen.c  dac_dma_gen.h  gen.c  gen.h  none_gen.c  none_gen.h  rect_gen.c  rect_gen.h  sine_gen.c  sine_gen.h  triangle_gen.c  triangle_gen.h
soft/main/util/: constants.h  ints.h  macros.h
